# gmail-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  audit.py  auth.py  gmail_tools.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: RUNBOOK.md  SECURITY.md
eval/: eval_harness.py  eval_report.json  eval_runner.py  scorecard.md  tracer.py
eval/traces/: 0396d96c.json  05034ac8.json  1b784909.json  64fce2db.json  6fc03bbf.json  731a96c5.json  7b4513bc.json  a975d9ce.json  bda2029a.json  fe1b9411.json
reports/: before_after_report.md
security/: security_tests.py  threat_model.md
src/gmail_agent/: agent.py  gmail_tools.py  guardrails.py
