[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-agent"
version = "0.1.0"
description = "AI Gmail support agent — capstone project"
requires-python = ">=3.11"
dependencies = [
    "openai==1.51.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.149.0",
]

[tool.setuptools.packages.find]
where = ["src"]